# debug-assistant

./: Cargo.toml  README.md
src/: app.rs  event.rs  log_export.rs  main.rs  root_app.rs  root_ui.rs  serial.rs  ui.rs
src/app/: event.rs  mod.rs  root.rs  root_ui.rs
src/core/: firmware.rs  mod.rs
src/features/: mod.rs
src/features/home/: mod.rs  state.rs  ui.rs
src/features/protocols/: mod.rs
src/features/protocols/flashing/: common.rs  controller.rs  mod.rs  state.rs  ui.rs
src/features/protocols/i2c/: mod.rs
src/features/protocols/jtag/flash/: controller.rs  mod.rs  service.rs  state.rs  ui.rs
src/features/protocols/spi/: mod.rs
src/features/protocols/swd/flash/: controller.rs  service.rs  state.rs  ui.rs
src/features/protocols/uart/: mod.rs
src/features/protocols/uart/isp/: controller.rs  mod.rs  service.rs  state.rs  ui.rs
src/features/protocols/uart/monitor/: controller.rs  input.rs  log.rs  mod.rs  service.rs  state.rs  ui.rs
src/flasher/: common.rs  mod.rs  state.rs  ui.rs
src/flasher/jtag/: mod.rs
src/flasher/jtag_swd/: mod.rs
src/flasher/swd/: mod.rs
src/flasher/usart_isp/: mod.rs  protocol.rs
src/home/: mod.rs  state.rs  ui.rs
src/serial_monitor/: mod.rs  state.rs  ui.rs
src/transport/: probe.rs  serial.rs
src/ui/: theme.rs  widgets.rs
